Bug 1617929 - Remove H264Changemonitor's special encrypted handling. r=jya,jolin

This undoes the changes from bug 1560092. These changes assumed that we couldn't
play encrypted avc3 content as we couldn't read SPS + PPS info from the stream.
However, after some testing I believe the issue is we can try and detect SPS +
PPS data in such streams, but need to better handle the encrypted case.

A following patch will address better handling SPS + PPS data in encrypted
streams.

Differential Revision: https://phabricator.services.mozilla.com/D70766